Complete Java teaching exercises with offline regression and CLI checks